InputfieldPageListSelect spacing fix for uikit theme

--- a/src/aos.scss
+++ b/src/aos.scss
@@ -1064,7 +1064,8 @@ html {
 }
 
 html.aos {
-  .InputfieldPageListSelect {
+  .InputfieldPageListSelect,
+  .InputfieldPageListSelect .InputfieldContent {
     @include clearfix();
   }
 }
